--- a/README
+++ b/README
@@ -36,18 +36,17 @@ $ENV{SIGNALP} = '/usr/local/src/signalp-4.1';
 #cd RNAMMER
 #mv /path/to/rnammer-1.2.src.tar.Z .
 #tar zxvf rnammer-1.2.src.tar.Z
-RNAMMER requires the older version of hmmsearch (v2). You can obtain the hmmsearch_v2 at http://eddylab.org/software/hmmer/2.3/hmmer-2.3.tar.gz. After building the software, rename this version of hmmsearch as hmmsearch2.
-
-#Hack the rnammer script like so; In the rnammer software configuration, edit the rnammer script to point
-
+#RNAMMER requires the older version of hmmsearch (http://eddylab.org/software/hmmer/2.3/hmmer-2.3.tar.gz)
+(下载hmmer老版本，后在src文件中将hmmsearch改名成hmmsearch2，同时也可以将整个文件改名成hmmsearch2)
+#对 rnammer 脚本进行编辑
 $HMMSEARCH_BINARY = "/path/to/hmmsearch2";
-    # be sure to give the complete path to where you installed hmmsearch2.
-    # update the INSTALL_PATH setting:
+(此处需要注意, 是要将hmmsearch2的文件位置连同文件名一同输入, eg. /home/tong/local/hmmsearch2/src/hmmsearch2)
+# update the INSTALL_PATH setting:
 $INSTALL_PATH = "/dir/where/you/installed/RNAMMER";
-Hack the core-rnammer script like so:
-
+(此处将rnammer软件完全路径输入进行替代)
+#对 core-rnammer 脚本进行编辑
 #There are two places where you'll find '--cpu 1 --compat'.  Remove the '--cpu1' at each of these places, and retain the '--compat'.
-#
+#(直接将--cpu 1删除即可)
 #
 #
 #
